/client -Style: -fixed nav width when no scrollbar, NavLink hover implemented

--- a/Server/client/src/components/NavigationBar/style.css
+++ b/Server/client/src/components/NavigationBar/style.css
@@ -19,7 +19,7 @@
 
 .nav-logo__img {
   height: 40px;
-  transition: all 0.4s ease;
+  transition: all 0.3s ease;
 }
 
 .nav__logo {
@@ -44,19 +44,17 @@
 .nav__listItem {
   padding: 0.5em 0;
   margin: 0 0.7em;
+  transition: all 0.2s ease;
 }
 
-.nav-link:hover {
-  border-bottom: solid #ff8811;
+.nav__listItem:hover {
+  scale: 1.08
 }
 
 .nav-link:visited {
   color: black;
 }
 
-/* .nav-link:hover{
-  scale: 1.05;
-} */
 .nav__login-container {
   flex: 1;
 }
@@ -67,5 +65,5 @@
   list-style-type: none;
 }
 .nav__login-list li :last-child {
-  margin: 0 12px;
+  margin: 0 5px;
 }
